# Backtesting-Engine

./: .gitignore  NINJATRADER_VALIDATION_PIPELINE.md  NT8_DATA_SPEC.md  README.md  STRATEGY_STATUS.md  pyproject.toml
archive/01_donchian_trend/: README.md
configs/: README.md  default_params.toml  default_params_mnq.toml  mff_flex_50k.toml  mff_flex_50k_mgc.toml  mff_flex_50k_mnq.toml
nt8/: DataDumpExporter.cs  PropFirmBreakoutStrategy.cs  README.md  RawBarDumpExporter.cs  VwapLunchFadeMCL.cs  VwapLunchFadeMCL_Custom.cs
scripts/: analyze_mnq_legacy_recovery.py  analyze_trade_log_drift.py  asymmetrical_sizing_matrix.py  backtest_renko_orb.py  backtest_vwap_reversion_mcl.py  build_mgc_full.py  build_mnq_full.py  calibrate_slippage.py  final_portfolio_backtest.py  fleet_simulator.py  monte_carlo_block_slippage_stress.py  monte_carlo_pass_probability.py  reconcile_trades.py  run_backtest.py  run_clean_portfolio_validation.py  run_grid_search.py  run_mnq_legacy_frozen.py  run_mnq_v1_full_history.py  run_monte_carlo.py  run_nt8_dual_feed_backtest.py  run_portfolio.py  run_walk_forward.py  stress_test_vwap_mcl.py  sweep_h1_times.py  tick_renko_orb_mgc.py
tests/: README.md  test_config.py  test_data_loader.py  test_engine.py  test_grid_search.py  test_mff_validation.py  test_mgc_h1_trend.py  test_monte_carlo.py  test_multi_engine.py  test_nt8_dual_feed.py  test_objective.py  test_orb.py  test_portfolio.py  test_reporting.py  test_risk.py  test_rules.py  test_slippage.py  test_types.py  test_walk_forward.py
tradingview/: PropFirmBreakoutStrategy_MNQ_Legacy.pine  README.md
(+110 files in other folders)
