[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "propfirm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "matplotlib>=3.8",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["propfirm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
